--- a/index.html
+++ b/index.html
@@ -5,7 +5,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Google Home Page" />
+    <link rel="stylesheet" href="./Styles/style.css" />
     <title>Google</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="Header">
+        <ul>
+          <li><a href="#">Gmail</a></li>
+          <li><a href="#">Images</a></li>
+          <li><img src="images/dots icon.png" alt="dot" /></li>
+          <li>
+            <button>Sign in</button>
+          </li>
+        </ul>
+      </div>
+      <div class="Goole">
+        <img src="images/Google.jpg" alt="Google" />
+      </div>
+      <div>
+        <input type="text" placeholder="Search Google or type a URL" />
+        <img src="images/magnifier.jpg" alt="magnifier" />
+        <a href="#"><img src="images/voice.png" alt="voice" /></a>
+      </div>
+      <div>
+        <a href="#">Get COVID-19 facts from top health officials</a>
+      </div>
+      <div>
+        Google offered in:
+        <a href="#">हिन्दी</a>
+        <a href="#">বাংলা</a>
+        <a href="#">తెలుగు</a>
+        <a href="#">मराठी</a>
+        <a href="#">தமிழ்</a>
+        <a href="#">ગુજરાતી</a>
+        <a href="#">ಕನ್ನಡ</a>
+        <a href="#">മലയാളം</a>
+        <a href="#">ਪੰਜਾਬੀ</a>
+      </div>
+      <div>
+        <a href="#">Advertising</a>
+        <a href="#">Business</a>
+        <a href="#">About</a>
+
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Settings</a>
+        <a href="#">Use Google.com</a>
+      </div>
+    </div>
+  </body>
 </html>
