--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
   <body>
     <div>
       <div class="Header">
-        <ul>
-          <li><a href="#">Gmail</a></li>
-          <li><a href="#">Images</a></li>
-          <li><img src="images/dots icon.png" alt="dot" /></li>
-          <li>
-            <button>Sign in</button>
-          </li>
-        </ul>
+        <nav>
+            <a href="#">Gmail</a>
+            <a href="#">Images</a>
+            <a href="#" class="dot"><img src="images/dots icon.png" alt="dot"> </a>
+            <button id="sign">Sign in</button>
+          
       </div>
-      <div class="Goole">
+      <div class="Google">
         <img src="images/Google.jpg" alt="Google" />
       </div>
-      <div>
-        <input type="text" placeholder="Search Google or type a URL" />
+      <div class="Search">
+        <input class="input" type="text" placeholder="Search Google or type a URL" />
         <img src="images/magnifier.jpg" alt="magnifier" />
         <a href="#"><img src="images/voice.png" alt="voice" /></a>
       </div>
