--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <img src="images/Google.jpg" alt="Google" />
       </div>
       <div class="Search">
-        <input class="input" type="text" placeholder="Search Google or type a URL" />
-        <img src="images/magnifier.jpg" alt="magnifier" />
-        <a href="#"><img src="images/voice.png" alt="voice" /></a>
+        <input id="text" type="text" placeholder="Search Google or type a URL" />
+        <img class="magnify" src="images/magnifier.jpg" alt="magnifier" />
+        <a href="#"><img class="voice" src="images/voice.png" alt="voice" /></a>
       </div>
       <div>
         <a href="#">Get COVID-19 facts from top health officials</a>
