--- a/index.html
+++ b/index.html
@@ -17,19 +17,23 @@
             <a href="#" class="dot"><img src="images/dots icon.png" alt="dot"> </a>
             <button id="sign">Sign in</button>
           
-      </div>
+      </div >
       <div class="Google">
         <img src="images/Google.jpg" alt="Google" />
       </div>
-      <div class="Search">
-        <input id="text" type="text" placeholder="Search Google or type a URL" />
+      <div class="Search" class="container">
+        <input id="text" type="text" placeholder=" Search Google or type a URL" />
         <img class="magnify" src="images/magnifier.jpg" alt="magnifier" />
         <a href="#"><img class="voice" src="images/voice.png" alt="voice" /></a>
       </div>
-      <div>
+      <div class="buttons">
+        <a href="#">Google Search</a>
+        <a href="#">I'm Feeling Lucky</a>
+      </div>
+      <div class="covid">
         <a href="#">Get COVID-19 facts from top health officials</a>
       </div>
-      <div>
+      <div class ="lang">
         Google offered in:
         <a href="#">हिन्दी</a>
         <a href="#">বাংলা</a>
@@ -41,15 +45,18 @@
         <a href="#">മലയാളം</a>
         <a href="#">ਪੰਜਾਬੀ</a>
       </div>
-      <div>
+      <div class="india">
+        <p>India</p>
+      </div >
+      <div class="footer">
+        <a href="#">About</a>
         <a href="#">Advertising</a>
         <a href="#">Business</a>
-        <a href="#">About</a>
+        <a href="#">How Search Works</a>
 
-        <a href="#">Privacy</a>
-        <a href="#">Terms</a>
-        <a href="#">Settings</a>
-        <a href="#">Use Google.com</a>
+        <a class="f" href="#">Privacy</a>
+        <a  href="#">Terms</a>
+        <a  href="#">Settings</a>
       </div>
     </div>
   </body>
