--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Google</title>
   </head>
   <body>
-    <div>
-      <div class="Header">
+    <div class="Home col-6">
+      <div class="Header col-6">
         <nav>
             <a href="#">Gmail</a>
             <a href="#">Images</a>
